// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`usePatternFlyDocsTool should have a consistent return structure: structure 1`] = `
{
  "callback": [Function],
  "name": "usePatternFlyDocs",
  "schema": true,
}
`;

exports[`usePatternFlyDocsTool, callback should parse parameters, default 1`] = `
{
  "content": [
    {
      "text": "components/button.md",
      "type": "text",
    },
  ],
}
`;

exports[`usePatternFlyDocsTool, callback should parse parameters, multiple files 1`] = `
{
  "content": [
    {
      "text": "combined docs content",
      "type": "text",
    },
  ],
}
`;

exports[`usePatternFlyDocsTool, callback should parse parameters, with empty files 1`] = `
{
  "content": [
    {
      "text": "trimmed content",
      "type": "text",
    },
  ],
}
`;

exports[`usePatternFlyDocsTool, callback should parse parameters, with empty strings in a urlList 1`] = `
{
  "content": [
    {
      "text": "trimmed and empty content",
      "type": "text",
    },
  ],
}
`;

exports[`usePatternFlyDocsTool, callback should parse parameters, with empty urlList 1`] = `
{
  "content": [
    {
      "text": "empty content",
      "type": "text",
    },
  ],
}
`;

exports[`usePatternFlyDocsTool, callback should parse parameters, with invalid urlList 1`] = `
{
  "content": [
    {
      "text": "invalid path",
      "type": "text",
    },
  ],
}
`;
